# jeonse-evidence-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: tests.yml
data/catalog/: listings.json
data/public/: hug_incidents.json  transactions.json
data/rag/: manifest.yaml
policies/: risk-policy-v1.yaml
scripts/: provider_smoke.py
src/jeonse_support/: __init__.py  adapters.py  agents.py  ai_provider.py  api.py  config.py  graph.py  models.py  policy.py  rag.py  repositories.py  service.py
tests/integration/: test_api_flow.py
tests/unit/: test_adapters_rag.py  test_ai_provider.py  test_policy.py  test_policy_manifest.py  test_streamlit_contract.py
