[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "jeonse-support"
version = "0.1.0"
description = "Advisory jeonse decision-support foundation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "streamlit>=1.39,<2",
  "langchain>=0.3,<0.4",
  "langgraph>=0.2,<0.4",
  "langchain-openai>=0.2,<0.4",
  "chromadb>=0.5,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.5,<3",
  "httpx>=0.27,<1",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jeonse_support"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
